[package]
name = "pathtrie"
description = "A specialised trie for paths in the style of a Patricia or radix trie"
version = "0.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bbqsrc/pathtrie"

[dependencies]
serde = { version = "1.0.115", optional = true, features = ["derive"] }
memmap = "0.7.0"
thiserror = "1.0.20"
indenter = "0.3.0"
tracing = "0.1.19"

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"
tracing-subscriber = { version = "0.2.11", features = ["fmt"] }
