[package]
name = "pathtrie"
description = "A specialised trie for paths in the style of a Patricia or radix trie"
version = "0.2.0-pre.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bbqsrc/pathtrie"

[dependencies]
bare-io = { git = "https://github.com/bbqsrc/bare-io", branch = 'main' }
serde = { version = "1.0.116", optional = true, default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21", optional = true }
indenter = "0.3.0"
tracing = { version = "0.1.21", default-features = false }

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"
tracing-subscriber = { version = "0.2.13", features = ["fmt"] }
memmap = "0.7.0"

[features]
default = ["std"]
alloc = ["bare-io/alloc"]
std = ["alloc", "thiserror", "tracing/std", "bare-io/std"]